# TestPrograms

./: .gitmodules
batchnorm/: CMakeLists.txt  run.sh
batchnorm/inc/: batchnorm.h  type.h
batchnorm/src/: batchnorm.cc  main.cc
batchnorm/tv/: tv_conv1_3x3_s2_bn_cfg.txt
conv3d/: CMakeLists.txt  conv3d  run.sh
conv3d/inc/: conv3d.h  type.h
conv3d/src/: conv3d.cc  main.cc
conv3d/tv/: tv_conv1_cfg.txt  tv_conv2_cfg.txt
fc/: CMakeLists.txt  conv3d  fc  run.sh
fc/inc/: fc.h  type.h
fc/src/: fc.cc  main.cc
fc/tv/: tv_ip1_cfg.txt  tv_ip2_cfg.txt
fchksnr/: CMakeLists.txt
fchksnr/inc/: log.h
fchksnr/src/: log.cc  main.cc
flatTest/: CMakeLists.txt
flatTest/inc/: nntable_generated.h
flatTest/src/: main.cpp  nntable.fbs
opencl_test/: .gitignore  CMakeLists.txt  run.sh
opencl_test/inc/: OpenCLInfo.h  im2col.h  settings.h  ssg_kernel.h
opencl_test/kernel/: kernels.cl
opencl_test/src/: OpenCLInfo.cpp  im2col.cpp  main.cpp  ssg_kernel.cpp
pool/: CMakeLists.txt  run.sh
pool/inc/: pool.h  type.h
pool/src/: main.cc  pool.cc
pool/tv/: tv_pool1_cfg.txt  tv_pool2_cfg.txt
relu/: CMakeLists.txt  run.sh
relu/inc/: relu.h  type.h
relu/src/: main.cc  relu.cc
relu/tv/: tv_relu1_cfg.txt
softmax/: CMakeLists.txt  run.sh
softmax/inc/: softmax.h  type.h
softmax/src/: main.cc  softmax.cc
softmax/tv/: tv_softmax_cfg.txt
